# wasted-sun

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATA_CONTRACT.md  Dockerfile  README.md  babel.cfg  messages.pot  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.do/: app.yaml
migrations/: 001_wasted_sun_qh_daily.sql  002_wasted_sun_qh_eur.sql
tests/: conftest.py  test_app.py  test_cube.py  test_cube_scope.py  test_share.py  test_sql_guard.py  test_sync_materialize.py  test_sync_run.py  test_timeseries.py  test_waste_display.py
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/es/LC_MESSAGES/: messages.mo  messages.po
wasted_sun/: __init__.py  app.py  config.py  exceptions.py  formatting.py  models.py  sql_guard.py  timeseries.py  views.py  waste_display.py
wasted_sun/data/: __init__.py  base.py  cube.py  cube_scope.py  mock.py  postgres.py
wasted_sun/static/: kpi-animate.js  style.css
wasted_sun/sync/: __init__.py  cube_loader.py  materialize.py  postgres_writer.py  run.py
wasted_sun/templates/: base.html  day.html  error.html
