[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wasted-sun"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["wasted_sun*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
