[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wasted-sun"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4",
    "flask-babel>=4.0,<5",
    "gunicorn>=22,<24",
    "python-dotenv>=1.0,<2",
    "psycopg[binary]>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "Babel>=2.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wasted_sun*"]

[tool.setuptools.package-data]
wasted_sun = ["templates/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
